assets/css/custom.css
.img-logo{
width: 4em;
}
iframe{
	width: 100%;
	height: 100%;
}
.uk-navbar .uk-drop {
	width: 250px
}

@media (min-width: 1200px) {
	.large-dropdown-section {
		min-width: 425px;
	}
}
@media (max-width: 1199px){
	.large-dropdown-section {
		min-width: 380px;
	}
}



@media (max-width: 320px) {
	.large-dropdown-section {
		min-width: 288px;
	}
}
.large-dropdown-section {
	transition: all 0.2s ease-in-out;
}
.embed-container {
	width: 100%;
	display: flex;
	height: 200px;

